# native_client

./: .gitignore  CMakeLists.txt
cmake/: NaClFlags.cmake
cmake/DaemonPlatform/: Architecture.cmake  Platform.cmake  System.cmake
cmake/DaemonPlatform/Architecture/: Architecture.cpp
include-hax/fake_masm/: macamd64.inc
site_scons/: site_init.py
src/include/: build_config.h  nacl_compiler_annotations.h  portability.h
src/include/win/: port_win.h
src/shared/gio/: CMakeLists.txt
src/shared/imc/: CMakeLists.txt
src/shared/platform/: CMakeLists.txt
src/shared/platform/posix/: nacl_error.c
src/shared/platform/win/: lock_impl.h  nacl_exit.c  port_win.c  xlate_system_error.c
src/trusted/cpu_features/: CMakeLists.txt
src/trusted/debug_stub/: CMakeLists.txt
src/trusted/desc/: CMakeLists.txt
src/trusted/fault_injection/: CMakeLists.txt
src/trusted/interval_multiset/: CMakeLists.txt
src/trusted/nacl_base/: CMakeLists.txt
src/trusted/perf_counter/: CMakeLists.txt
src/trusted/platform_qualify/: CMakeLists.txt
src/trusted/platform_qualify/arch/x86/: vcpuid.c
src/trusted/service_runtime/: CMakeLists.txt  nacl_signal.h  sel_ldr.c
src/trusted/service_runtime/arch/x86_32/: sel_rt_32.c
src/trusted/service_runtime/arch/x86_64/: nacl_switch_unwind_win.asm
src/trusted/service_runtime/linux/: CMakeLists.txt  nacl_bootstrap.c
src/trusted/validator/: CMakeLists.txt  validation_cache.c
src/trusted/validator_arm/: CMakeLists.txt
src/trusted/validator_mips/: CMakeLists.txt
src/trusted/validator_ragel/: CMakeLists.txt  bitmap.h  decoding.h
src/trusted/validator_x86/: CMakeLists.txt
